# my_k8s_sre_responder

./: README.md  __init__.py  baseline_agent.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  my_k8s_sre_responder_environment.py
